--- a/css/style.css
+++ b/css/style.css
@@ -223,8 +223,7 @@ a.default:hover {
 /* COMMENTS */
 .comments {
   border: 1px solid #999999;
-  border-radius: 2px;
-  height: 400px;
+  border-radius: 3px;
   color: #bbbbbb;
 }
 
@@ -232,14 +231,15 @@ a.default:hover {
   font-size: 4em;
   position: relative;
   left: 50%;
-  margin: 0.5em 0em;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+  margin: 0.5em 0em;
 }
 
 .comments p {
   text-align: center;
   font-size: 2em;
+  margin-bottom: 1em;
 }
 
 /* PROJECTS */
@@ -278,6 +278,7 @@ a.default:hover {
 form.contact {
   padding: .8em .8em;
   border: 1px solid #999999;
+  border-radius: 3px;
   text-align: center;
   max-width: 480px;
   margin-left: auto;
@@ -301,11 +302,12 @@ form.contact section label {
 form.contact section input, form.contact section textarea {
   width: 100%;
   resize: none;
-  line-height: 1.1em;
+  padding: 0.2em;
   font-size: 1em;
   font-family: "Lucida Console";
   margin-top: 0.4em;
   border: 1px solid #999999;
+  border-radius: 3px;
 }
 
 form.contact section *::-webkit-input-placeholder {
@@ -338,6 +340,7 @@ form.contact button {
   background: none;
   color: #999999;
   border: 1px solid #999999;
+  border-radius: 3px;
   padding: .8em 0em;
   margin-top: .6em;
   width: 100%;
