--- a/css/style.scss
+++ b/css/style.scss
@@ -240,27 +240,26 @@ a {
             }
         }
     }
-
 }
 
 /* COMMENTS */
 .comments {
     border: 1px solid $color-light;
-    border-radius: 2px;
-    height: 400px;
+    border-radius: 3px;
     color: $color-lighter;
 
     i {
         font-size: 4em;
         position: relative;
         left: 50%;
-        margin: 0.5em 0em;
         transform: translateX(-50%);
+        margin: 0.5em 0em;
     }
 
     p {
         text-align: center;
         font-size: 2em;
+        margin-bottom: 1em;
     }
 }
 
@@ -300,6 +299,7 @@ form.contact
 {
     padding: .8em .8em;
     border: 1px solid $color-light;
+    border-radius: 3px;
     text-align: center;
     max-width: 480px;
     margin-left: auto;
@@ -321,11 +321,12 @@ form.contact
         input, textarea {
             width: 100%;
             resize: none;
-            line-height: 1.1em;
+            padding: 0.2em;
             font-size: 1em;
             font-family: $font-family;
             margin-top: 0.4em;
             border: 1px solid $color-light;
+            border-radius: 3px;
         }
 
         *::placeholder {
@@ -341,6 +342,7 @@ form.contact
         background: none;
         color: $color-light;
         border: 1px solid $color-light;
+        border-radius: 3px;
         padding: .8em 0em;
         margin-top: .6em;
         width: 100%;
